# One-Or-The-Other

./: .gitignore  README.md  SAMPLE.env  pyproject.toml  requirements.txt
ooto/: manage.py
ooto/ooto/: admin.py  urls.py
ooto/ooto/migrations/: 0001_initial.py
ooto/ooto/models/: user_choice.py
ooto/ooto/templates/ooto/: admin.html  game.html  history.html  home.html
ooto/ooto/templates/ooto/auth/: login.html
ooto/ooto/views/: views.py
ooto/ootoproject/: asgi.py  settings.py  wsgi.py
site/: manage.py
site/mysite/: settings.py
site/ooto/: admin.py  apps.py  auth.py  models.py  urls.py  views.py
site/ooto/models/: __init__.py  choice.py  game.py
site/ooto/templates/ooto/: admin.html  game.html  header.html  history.html  home.html  layout.html
site/ooto/views/: auth.py  views.py
site/ooto_project/: asgi.py  settings.py  wsgi.py
site/project/: asgi.py  settings.py  urls.py  wsgi.py
site/randomtools/: apps.py  views.py
